--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@600&display=swap');
 @import './styles/partials/variables';
 
 * {
@@ -8,7 +9,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: $main-font;
   line-height: 1.4;
 }
 
@@ -27,4 +28,11 @@ a {
 
 li {
   list-style: none;
+}
+
+.container {
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 2rem;
+  overflow: hidden;
 }
