--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,2 +1,4 @@
 $color-primary: #64379f;
 $color-secondary: #ddacf5;
+$main-font: 'Roboto', sans-serif;
+$logo-font: 'Big Shoulders Stencil Display', cursive;
