--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -10,7 +10,7 @@
 
     #nav-logo {
       font-family: $logo-font;
-      color: $color-secondary;
+      color: $color-primary;
       font-size: 2.5rem;
 
       @media (max-width: 600px) {
@@ -26,7 +26,7 @@
         margin: 0 1rem;
 
         & > a {
-          color: $color-secondary;
+          color: $color-primary;
           font-size: 2rem;
 
           @media (max-width: 600px) {
