--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,4 +1,5 @@
 $color-primary: #ddacf5;
 $color-secondary: #64379f;
+$color-dark: #27104e;
 $main-font: 'Roboto', sans-serif;
 $logo-font: 'Big Shoulders Stencil Display', cursive;
