Changed the background body colour of the app

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,5 +1,5 @@
 $color-primary: #ddacf5;
 $color-secondary: #64379f;
-$color-dark: #27104e;
+$color-dark: #190B28;
 $main-font: 'Roboto', sans-serif;
 $logo-font: 'Big Shoulders Stencil Display', cursive;
