--- a/client/src/styles/BottomMenu.scss
+++ b/client/src/styles/BottomMenu.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 10%;
   background: transparent;
+  transition: width 0.2s ease-out;
 
   .icon-container {
     text-align: center;
