--- a/client/src/styles/Chat.scss
+++ b/client/src/styles/Chat.scss
@@ -8,7 +8,7 @@
   .head-area {
     display: flex;
     padding-bottom: 1rem;
-
+    
     .header-inner-area {
       flex: 1;
       padding: 0 1rem;
@@ -32,5 +32,28 @@
 
   .chat-area {
     flex: 1;
+  }
+
+  .bottom-area {
+    padding-top: 1rem;
+    display: flex;
+
+    .message-input-area {
+      flex: 1;
+
+      .message-input-inner-area {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+    }
+
+    .icon-area {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 }
