--- a/client/src/styles/Messages.scss
+++ b/client/src/styles/Messages.scss
@@ -1,1 +1,11 @@
 @import './partials/variables';
+
+.messages-main-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  overflow-y: scroll;
+}
