--- a/client/src/styles/Meeting.scss
+++ b/client/src/styles/Meeting.scss
@@ -7,7 +7,20 @@
   transition: width 0.2s ease-out;
 
   .meeting-info {
-    padding: 1rem;
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 0.5rem;
+
+    .room-id-area {
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      .room-id {
+        color: $color-primary;
+        margin-right: 0.5rem;
+      }
+    }
   }
 
   .videos-area {
