--- a/client/src/styles/PreRoom.scss
+++ b/client/src/styles/PreRoom.scss
@@ -1,1 +1,48 @@
 @import './partials/variables';
+
+.preroom-main-area {
+  padding: 2rem 0;
+
+  .username-area {
+    display: flex;
+    justify-content: center;
+
+    .username-input-area {
+      width: 50%;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      border-radius: 5px;
+      padding-top: 1rem;
+    }
+  }
+
+  .info-area {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+
+    .inner-info-area {
+      width: 50%;
+      position: relative;
+
+      .stream-area {
+        height: 30rem;
+
+        .stream-video {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .stream-buttons-area {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+      }
+    }
+  }
+}
