--- a/client/src/styles/PreRoom.scss
+++ b/client/src/styles/PreRoom.scss
@@ -14,6 +14,10 @@
       justify-content: center;
       border-radius: 5px;
       padding-top: 1rem;
+
+      @media (max-width: 600px) {
+        width: 85%;
+      }
     }
   }
 
@@ -35,6 +39,10 @@
           width: auto;
           height: 100%;
           border-radius: 20px;
+
+          @media (max-width: 600px) {
+            width: 100%;
+          }
         }
       }
 
@@ -58,6 +66,10 @@
             justify-content: center;
           }
         }
+      }
+
+      @media (max-width: 600px) {
+        width: 90%;
       }
     }
   }
